src/style/pages/_about.sass
@import '../base/variables'

section#about
    margin-top: #{$nav-bar-height}
    overflow-y: auto
    height: calc(100vh - #{$nav-bar-height})
    .me
        position: relative
        margin-bottom: -0.5rem
        img
            max-width: 100%
            box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2)
            border-radius: 0 $border-radius-lg 0 $border-radius-lg
        p.credit
            position: absolute
            font-size: 0.8rem
            margin: 0
            padding: 0.1rem 0.3rem
            bottom: 1rem
            right: 0.5rem
            background-color: rgba(255, 255, 255, 0.5)
            border-radius: 0 $border-radius-lg 0 $border-radius-lg
            a
                color: #000
                text-decoration: none

table.data
    border-collapse: collapse
    margin: 1rem 0
    width: 100%
    th
        background: #efefef
        text-align: left
    td,
    th
        border: 0.1px solid #a7a7a7 /* .1 instead of 1px to avoid thick borders on Chrome */
        padding: 0.5rem
    &.icons
        th:first-child,
        td:first-child
            text-align: center
        img
            vertical-align: middle
            height: 32px

/* some ads blocker block classes containing 'social', so let's put a random string instead */
.yydchtxork
    h1
        @media (min-width: $container-column-threshold)
            text-align: center
            margin: auto
            max-width: 30%
    ul
        text-align: center /* aligned to the visitor's book content */
        li
            list-style: none
            display: inline-block
            margin-top: $block-space
            height: 2rem
            &:not(:first-child)
                margin-left: $block-space
            img.icon
                height: 2rem

